--- a/Header.css
+++ b/Header.css
@@ -1,16 +1,27 @@
 .header {
+    position: sticky;
+    top: 0;
     display: flex;
-
+    justify-content: space-evenly;
+    border-bottom: 0.5px solid lightgray;
+    z-index: 999;
+    padding-top: 10px;
+    padding-bottom: 10px;
 
 }
+
+
 .header__left {
     display: flex;
+    margin: 5px;
+    padding: 2px;
+
 }
 
 .header__left > img {
     object-fit: contain;
     height: 35px;
-    margin-right: 5px;
+    margin: 2px;
   
 }
 .header__search {
@@ -28,9 +39,15 @@
     padding: 1;
     background-color: #eef3f8;
     outline: none;
+    background: none;
     border: none;
 }
 
 .header__right{
+
+    display: flex;
+    align-items: center;
+    padding-right: 10px;
+    
     
 }
